Fixed:Form_Configure_and_layout_EndPoints
